examples/test/testpolicy7770.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7770
  namespace: namespace190
spec:
  podSelector:
    matchLabels:
      key40: value27
      key14: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value40
          key11: value45
          key5: value44
      podSelector:
        matchLabels:
          key16: value31
          key4: value6
          key46: value21
